--- a/http-logging/.gitignore
+++ b/http-logging/.gitignore
@@ -1,10 +1,8 @@
 HELP.md
 target/
-.mvn
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-*.cmd
-mvnw
 
 ### STS ###
 .apt_generated
