--- a/http-logging/src/test/resources/application.yml
+++ b/http-logging/src/test/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     hibernate:
       ddl-auto: update
       naming:
-        physical-strategy: ru.suslov.http_logging.configuration.CustomPhysicalNamingStrategy
+        physical-strategy: ru.suslov.http_logging_spring_boot_starter.configuration.CustomPhysicalNamingStrategy
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
