--- a/perfomance-statistics/pom.xml
+++ b/perfomance-statistics/pom.xml
@@ -26,6 +26,11 @@
 			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
+<!--			<groupId>ru.suslov</groupId>-->
+<!--			<artifactId>http-logging-spring-boot-starter</artifactId>-->
+<!--			<version>0.0.1-SNAPSHOT</version>-->
+<!--		</dependency>-->
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring-boot.version}</version>
