--- a/http-logging/pom.xml
+++ b/http-logging/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>os8</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>ru.suslov</groupId>
+<!--	<groupId>ru.suslov</groupId>-->
 	<artifactId>http-logging-spring-boot-starter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 <!--	<packaging>war</packaging>-->
