--- a/perfomance-statistics/pom.xml
+++ b/perfomance-statistics/pom.xml
@@ -25,7 +25,7 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>${spring-boot.version}</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>-->
 <!--			<groupId>ru.suslov</groupId>-->
 <!--			<artifactId>http-logging-spring-boot-starter</artifactId>-->
 <!--			<version>0.0.1-SNAPSHOT</version>-->
