--- a/user-service/src/test/resources/application.yml
+++ b/user-service/src/test/resources/application.yml
@@ -13,3 +13,8 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+
+jwt:
+  secret: 2b44b0b00ffbbc0a51e490438a97b20438a97b244b0b00ffbbc0a51
+  expirationTime: 1m
+  refreshTokenExpiration: 10m
