--- a/metrics-consumer/src/test/resources/application.yml
+++ b/metrics-consumer/src/test/resources/application.yml
@@ -15,5 +15,13 @@ spring:
       matching-strategy: ANT_PATH_MATCHER
   kafka:
     bootstrap-servers: localhost:9092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            add:
+              type:
+                headers: false
   consumer:
       value-deserializer: org.apache.kafka.common.serialization.JsonDeserializer
